# jellyfin-upload

./: Cargo.toml
html/: index.css  index.html  index.js
src/: config.rs  http_handler.rs  http_server.rs  keystore.rs  main.rs  module.rs  schedule.rs
systemd/: jellyfin-upload.service
