[package]
name = "jellyfin-upload"
version = "1.5.2"
edition = "2021"
authors = ["chaueq"]
description = "File upload server for jellyfin"
license = "MIT"

[dependencies]
signal-hook = "^0.3.17"
sha3 = "^0.10.8"
regex = "^1.11.1"
serde_json = "^1.0.133"
fs2 = "^0.4.3"
md5 = "0.7.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jellyfin-upload", dest = "/usr/bin/jellyfin-upload", mode = "755" },
    { source = "html/index.html", dest = "/var/lib/jellyfin-upload/index.html", mode = "644" },
    { source = "html/index.css", dest = "/var/lib/jellyfin-upload/index.css", mode = "644" },
    { source = "html/index.js", dest = "/var/lib/jellyfin-upload/index.js", mode = "644" },
    { source = "systemd/jellyfin-upload.service", dest = "/etc/systemd/system/jellyfin-upload.service", mode = "640" },
]

[package.metadata.deb]
assets = [
    ["target/release/jellyfin-upload", "usr/bin/jellyfin-upload", "755"],
    ["html/index.html", "var/lib/jellyfin-upload/index.html", "644"],
    ["html/index.css", "var/lib/jellyfin-upload/index.css", "644"],
    ["html/index.js", "var/lib/jellyfin-upload/index.js", "644"],
    ["systemd/jellyfin-upload.service", "etc/systemd/system/jellyfin-upload.service", "640"],
]